[gd_scene load_steps=5 format=2]

[ext_resource path="res://placeholder.tres" type="SpriteFrames" id=1]
[ext_resource path="res://character/player/Player.gd" type="Script" id=2]
[ext_resource path="res://pea.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="Area2D"]
position = Vector2( 1, -1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="PlayerScene" type="Node2D" parent="."]

[node name="BulletOrigin" type="Node2D" parent="."]

[node name="BulletSpawn" type="Position2D" parent="BulletOrigin"]
position = Vector2( 43, 1 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.125

[node name="CritTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -16, 16.5 )
scale = Vector2( 0.032, 0.0299228 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="CritTimer" to="." method="_on_CritTimer_timeout"]
